tests fixes